Improve display of long timespans

--- a/src/index.html
+++ b/src/index.html
@@ -245,22 +245,22 @@
             <div>
                 At an attack rate of
                 <span data-calculate="attackrate">?</span>
-                joins per second, the worst case scenario would happen once every
+                joins per second, the worst case scenario would happen once in
                 <div class="popup">
-                    <span data-calculate="millennia-worstcase">?</span> millennia
+                    <span data-calculate="timespan-worstcase-pretty">?</span>
                     <div class="popup-content">
                         <div>
-                            <span data-calculate="events-worstcase">?</span> events
+                            <span data-calculate="events-worstcase">?</span> joins per event
                             &div;
                             (<span data-calculate="attackrate">?</span> joins per second
                             &times;
-                            60 &times; 60 &times; 24 &times; 365 &times; 1000 seconds per millennia)
+                            60 &times; 60 &times; 24 &times; 365 &times; seconds per year)
                             =
-                            <span data-calculate="millennia-worstcase">?</span> days
+                            <span data-calculate="timespan-worstcase">?</span> years per event
                         </div>
                         <br>
                         <div>
-                            =<span data-calculate="events-worstcase">?</span>/(<span data-calculate="attackrate">?</span>*60*60*24*365*1000)
+                            =<span data-calculate="events-worstcase">?</span>/(<span data-calculate="attackrate">?</span>*60*60*24*365)
                         </div>
                     </div>
                 </div>
@@ -314,22 +314,22 @@
                 </div>
             </div>
             <div>
-                A successful attack on an average sized group would happen once every
+                A successful attack on an average sized group would happen once in
                 <div class="popup">
-                    <span data-calculate="millennia-average">?</span> millennia
+                    <span data-calculate="timespan-average-pretty">?</span>
                     <div class="popup-content">
                         <div>
-                            <span data-calculate="events-average">?</span> events
+                            <span data-calculate="events-average">?</span> joins per event
                             &div;
                             (<span data-calculate="attackrate">?</span> joins per second
                             &times;
-                            60 &times; 60 &times; 24 &times; 365 &times; 1000 seconds per millennia)
+                            60 &times; 60 &times; 24 &times; 365 &times; seconds per year)
                             =
-                            <span data-calculate="millennia-average">?</span> millennia
+                            <span data-calculate="timespan-average">?</span> years per event
                         </div>
                         <br>
                         <div>
-                            =<span data-calculate="events-average">?</span>/(<span data-calculate="attackrate">?</span>*60*60*24*365*1000)
+                            =<span data-calculate="events-average">?</span>/(<span data-calculate="attackrate">?</span>*60*60*24*365)
                         </div>
                     </div>
                 </div>
